@@ -78,6 +78,10 @@ uses the overall mean for backwards compatability with older code).
 Predictions of type "expected" incorporate the baseline hazard and are
 thus absolute instead of relative; the
 \code{reference} option has no effect on these.
+
+Models that contain a \code{frailty} term are a special case: due
+to the technical difficulty, when there is a \code{newdata} argument the
+predictions will always be for a random effect of zero.  
 }
 
 \seealso{
